--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: Curious dives into maritime tech—or whatever else I’m into this we
 use-site-title: true
 ---
 
-# Link to my contact info
+<!-- Link to my contact info -->
 
 <style>
   .link-button {
@@ -24,6 +24,13 @@ use-site-title: true
     transform: scale(1.05);    /* optional: slight zoom */
   }
 </style>
+
+<div style="text-align: center; margin-top: 10px; margin-bottom: 30px;">
+  <a href="https://ekram49.github.io/aboutme/" class="link-button">Who Dis?</a>
+  <a href="https://drive.google.com/file/d/1HnU5TD-siw7CX4ezt4imaF2FTCv6M6pR/view?usp=drive_link" class="link-button">Resume</a>
+  <a href="https://www.linkedin.com/in/ekram-ullah-ahmed/" class="link-button">LinkedIn</a>
+  <a href="mailto:ekramullahzaki@gmail.com" class="link-button">Email</a>
+</div>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
