--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Ekram’s Logbook
-subtitle: Maritime Tech & Analytics—or whatever else I’m into this week!
+subtitle: Maritime Tech & Analytics—or whatever I’m into this week!
 use-site-title: true
 ---
 
